--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        documentS
-    </title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>documentS</title>
+  </head>
+  <body>
     <p>Je stinkt</p>
     <p>Je stinkt</p>
     <p>Je stinkt</p>
@@ -20,18 +18,23 @@
     <p>Je stinkt</p>
     <p>Je stinkt</p>
     <p>Je stinkt</p>
-    <p>Je stinkt</p><p>Je stinkt</p>
     <p>Je stinkt</p>
     <p>Je stinkt</p>
     <p>Je stinkt</p>
     <p>Je stinkt</p>
-    <p>Je stinkt</p><p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p><p>Je stinkt</p>
     <p>Je stinkt</p>
     <p>Je stinkt</p>
-    <p>Je stinkt</p><p>Je stinkt</p><p>Je stinkt</p><p>Je stinkt</p>
+    <p>Je stinkt</p>
+    <p>Je stinkt</p>
+    <p>Je stinkt</p>
+    <p>Je stinkt</p>
+    <p>Je stinkt</p>
+    <p>Je stinkt</p>
+    <p>Je stinkt</p>
+    <p>Je stinkt</p>
+    <p>Je stinkt</p>
+    <p>Je stinkt</p>
+    <p>Je stinkt</p>
     <p>je moedur</p>
-    
-</body>
+  </body>
 </html>
