--- a/index.html
+++ b/index.html
@@ -3,38 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="./css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>documentS</title>
+    <title>quizz-home</title>
   </head>
   <body>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>Je stinkt</p>
-    <p>je moedur</p>
+    <main>
+      <div class="content">
+        <div class="left">left</div>
+        <div class="midd">midd</div>
+        <div class="right">right</div>
+
+      </div>
+        
+
+    </main>
   </body>
 </html>
