--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>quizz-home</title>
   </head>
   <body>
     <main>
-      <div class="content">
-        <div class="left">left</div>
-        <div class="midd">midd</div>
-        <div class="right">right</div>
-
-      </div>
-        
-
+      <!-- niks in deze div doen is alleen voor de wite box ding -->
+      <div class="content"></div>
+      <!-- niks in deze div doen is alleen voor de wite box ding -->
+      <div class="left">left</div>
+      <div class="midd">midd</div>
+      <div class="right">right</div>
     </main>
   </body>
 </html>
