--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./js/quizz.js" defer></script>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <title>quizz-home</title>
   </head>
   <body>
@@ -18,8 +19,8 @@
       <div class="midd">
         <h2 class="vraagTitle" id="vraag">random shit naam test</h2>
         <div class="quizz" id="quizz"></div>
-        <button class="submit" id="submit">
-          <center>Submit</center>
+        <button class="submit" id="submit" onclick="submit()">
+          <center>Start</center>
         </button>
       </div>
       <!-- stats dus van wat je goed en fout doet -->
