--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="./css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./js/quizz.js" defer></script>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>quizz-home</title>
   </head>
   <body>
@@ -26,5 +27,10 @@
       <!-- stats dus van wat je goed en fout doet -->
       <div class="right" id="stats"></div>
     </main>
+
+    <!-- <div>
+      <input type="radio" name="" id="" onclick="check('G', '1')"/>
+
+    </div> -->
   </body>
 </html>
