pretty much on crack

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
       <!-- vragen etc (gwn de quiz) -->
       <div class="midd">
         <h2 class="vraagTitle" id="vraag">random shit naam test</h2>
-        <div class="quizz" id="quizz"></div>
+        <div class="quizz" id="lss">
+          <form id="quizz" action="">
+            
+          </form>
+        </div>
         <button class="submit" id="submit" onclick="submit()">
           <center>Start</center>
         </button>
       </div>
       <!-- stats dus van wat je goed en fout doet -->
       <div class="right" id="stats"></div>
+      <!-- <input type='radio' id='q' name='q' value="g" /> F -->
     </main>
-
-    <!-- <div>
-      <input type="radio" name="" id="" onclick="check('G', '1')"/>
-
-    </div> -->
   </body>
 </html>
