--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2 class="vraagTitle" id="vraag">random shit naam test</h2>
         <div class="quizz" id="lss">
           <form id="quizz" action="">
-            
+            <span id="q"></span>
           </form>
         </div>
         <button class="submit" id="submit" onclick="submit()">
