--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
       <!-- vragen etc (gwn de quiz) -->
       <div class="midd">
         <h2 class="vraagTitle" id="vraag">random shit naam test</h2>
-        <div class="quizz" id="lss">
-          <form id="quizz" action="">
-            <span id="q"></span>
-          </form>
+        <div class="quizz" id="quizz">
+          <button id="q1"></button>
+          <button id="q2"></button><br />
+          <button id="q3"></button>
+          <button id="q4"></button>
         </div>
-        <button class="submit" id="submit" onclick="submit()">
-          <center>Start</center>
-        </button>
       </div>
       <!-- stats dus van wat je goed en fout doet -->
       <div class="right" id="stats"></div>
