--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
         <h2 class="vraagTitle" id="vraag">random shit naam test</h2>
         <div class="quizz" id="quizz">
           <button id="q1"></button>
-          <button id="q2"></button><br />
           <button id="q3"></button>
+
+
+          <button id="q2"></button>
           <button id="q4"></button>
         </div>
       </div>
+     
       <!-- stats dus van wat je goed en fout doet -->
       <div class="right" id="stats"></div>
       <!-- <input type='radio' id='q' name='q' value="g" /> F -->
