--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       <div class="midd">
         <h2 class="vraagTitle" id="vraag">random shit naam test</h2>
         <div class="quizz" id="quizz">
-
+          <div class="kas">
           <button id="q1" onclick="check(1)"></button>
           <button id="q2"></button><br />
-
           <button id="q3"></button>
           <button id="q4"></button>
+        </div>
           </div>
         </div>
         </div>
