--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>quizz-home</title>
   </head>
   <body>
+    <header><img src="../images/logowebbb.jpeg" alt="logo" class="logo"</header>
     <main>
       <!-- niks in deze div doen is alleen voor de wite box ding -->
       <div class="content"></div>
