--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="./css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./js/quizz.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>quizz-home</title>
   </head>
   <body>
-    <header><img src="../images/logowebbb.jpeg" alt="logo" class="logo"</header>
+    <header>
+      <img src="../images/logowebbb.jpeg" alt="logo" class="logo" />
+    </header>
     <main>
       <!-- niks in deze div doen is alleen voor de wite box ding -->
       <div class="content"></div>
@@ -30,7 +31,10 @@
         </div>
       </div>
       <!-- stats dus van wat je goed en fout doet -->
-      <div class="right" id="stats"></div>
+      <div class="right" id="stats">
+        <p id="goed"></p>
+        <p id="fout"></p>
+      </div>
     </main>
   </body>
 </html>
