--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <meta name="author" content="88129StefCeo">
+    <title>Homapage</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logo"><img src="./images/logowebbb.jpeg" id="ft" width="100px"></div>
+    </header>
+    <background> </background>
+    <main> 
+         <div id="onderwerpen">
+                    <h3>Onderwerpen:</h3><br/>
+                <a href="./filmsQuizz.html">-Films</a><br/><br/>
+                <a href="./seriesQuizz.html">-Series</a><br/><br/>
+                <a href="./gamesQuizz.html">-Games</a><br/>
+                </div>
+        </div>
+        <div id="inleiding"><h1 id="ma">Welkom bij deze quizz!</h1>
+            <h3>Op deze website hebben we 3 verschillende quizies die je kunt spelen.</h3>
+            <h4>Hoe werkt het?:</h4>
+            <h5>-Je seleteerd het onderwerp van de Quiz door erop te klikken.<br/>
+                -Je krijgt eerst boven aan een vraag te zien die bepaald word door het gekozen onderwerp.<br/>
+                -Je krijgt 4 antwoorden op je scherm te zien in een vorm van een button.<br/>
+                -Je selecteerd je antwoord en gaat door naar de volgende vraag!<br/>
+                PS. (Rechts onder staat er of je de vraag goed of fout had).</h5>
+              
+    </main>
+    <footer>
+        made by: 87234, 87964, 88129.
+    </footer>
 </body>
 </html>
